[package]
name = "fastnet"
version = "0.1.5"
edition = "2021"
authors = ["Filipe Freitas <filipe.freitas@filipefreitas.dev>"]
description = "Ultra-low latency encrypted networking for real-time games. TLS 1.3 + ChaCha20-Poly1305 with ~15µs RTT."
license = "MIT OR Apache-2.0"
repository = "https://github.com/filipe-freitas-dev/fastnet"
documentation = "https://docs.rs/fastnet"
readme = "README.md"
keywords = ["networking", "gamedev", "udp", "tls", "encryption"]
categories = ["network-programming", "game-development", "cryptography"]

[dependencies]
chacha20poly1305 = "0.10"
rand = "0.9"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "sync", "macros"] }
tokio-rustls = "0.26"

[dependencies.rcgen]
version = "0.13"
optional = true

[features]
default = []
ffi = []
dev-certs = ["dep:rcgen"]
full = ["ffi", "dev-certs"]

[lib]
name = "fastnet"
crate-type = ["lib", "cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
